--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,29 +1,51 @@
 pipeline {
-    agent {
-        docker {
-            image 'maven:3-alpine'
-            args '-v /root/.m2:/root/.m2'
-        }
+    agent any
+    
+    environment {
+        NEXUS_CREDENTIALS = credentials('nexus-credentials-id')
     }
+
     stages {
-        stage('Build') {
+        stage('Checkout') {
             steps {
-                sh 'mvn -B -DskipTests clean package'
+                git 'https://github.com/yourusername/yourrepository.git'
             }
         }
+
+        stage('Build') {
+            steps {
+                sh 'mvn clean install -Dmaven.test.skip=true'
+            }
+        }
+
         stage('Test') {
             steps {
                 sh 'mvn test'
             }
-            post {
-                always {
-                    junit 'target/surefire-reports/*.xml'
+        }
+
+        stage('SonarQube Analysis') {
+            steps {
+                withSonarQubeEnv('SonarQubeServer') {
+                    sh 'mvn sonar:sonar'
                 }
             }
         }
-        stage('Deliver') {
+
+        stage('Deploy') {
             steps {
-                sh './jenkins/scripts/deliver.sh'
+                nexusArtifactUploader(
+                    nexusVersion: 'nexus3',
+                    protocol: 'https',
+                    nexusUrl: 'https://nexus.example.com',
+                    groupId: 'com.example',
+                    version: '1.0.0',
+                    repository: 'maven-snapshots',
+                    credentialsId: "${NEXUS_CREDENTIALS}",
+                    artifacts: [
+                        [artifactId: 'your-artifact', file: 'target/your-artifact-1.0.0.jar']
+                    ]
+                )
             }
         }
     }
