--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -24,26 +24,26 @@ pipeline {
             }
         }
  
-        stage('SonarQube Analysis') {
-            steps {
-                // Run SonarQube analysis with the token
-                withSonarQubeEnv(SONARQUBE_SERVER) {
-                    sh """
-                        ${MAVEN_HOME}/bin/mvn sonar:sonar \
-                        -Dsonar.login=${sonarqube-token}
-                    """
-                }
-            }
-        }
+        // stage('SonarQube Analysis') {
+        //     steps {
+        //         // Run SonarQube analysis with the token
+        //         withSonarQubeEnv(SONARQUBE_SERVER) {
+        //             sh """
+        //                 ${MAVEN_HOME}/bin/mvn sonar:sonar \
+        //                 -Dsonar.login=${sonarqube-token}
+        //             """
+        //         }
+        //     }
+        // }
  
-        stage('Quality Gate') {
-            steps {
-                // Wait for the SonarQube analysis to be completed and check the quality gate status
-                timeout(time: 5, unit: 'MINUTES') {
-                    waitForQualityGate abortPipeline: true
-                }
-            }
-        }
+        // stage('Quality Gate') {
+        //     steps {
+        //         // Wait for the SonarQube analysis to be completed and check the quality gate status
+        //         timeout(time: 5, unit: 'MINUTES') {
+        //             waitForQualityGate abortPipeline: true
+        //         }
+        //     }
+        // }
  
         stage('Publish to Nexus') {
             steps {
