--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     environment {
         // Define environment variables for tools
         NEXUS_CREDENTIALS = 'nexus-credentials'  // The ID of the Nexus credentials
-        // sonarqube-token = 'sonarqube-token'  // The ID of the SonarQube token
+        sonarqube-token = 'sonarqube-token'  // The ID of the SonarQube token
         SONARQUBE_SERVER = 'SonarQube Server'  // The name of the SonarQube server configured in Jenkins
         MAVEN_HOME = tool name: 'MAVEN_HOME', type: 'maven'
     }
@@ -24,49 +24,49 @@ pipeline {
             }
         }
  
-        // stage('SonarQube Analysis') {
-        //     steps {
-        //         // Run SonarQube analysis with the token
-        //         withSonarQubeEnv(SONARQUBE_SERVER) {
-        //             sh """
-        //                 ${MAVEN_HOME}/bin/mvn sonar:sonar \
-        //                 -Dsonar.login=${sonarqube-token}
-        //             """
-        //         }
-        //     }
-        // }
- 
-        // stage('Quality Gate') {
-        //     steps {
-        //         // Wait for the SonarQube analysis to be completed and check the quality gate status
-        //         timeout(time: 5, unit: 'MINUTES') {
-        //             waitForQualityGate abortPipeline: true
-        //         }
-        //     }
-        // }
- 
-        stage('Publish to Nexus') {
+        stage('SonarQube Analysis') {
             steps {
-                script {
-                    def pom = readMavenPom file: 'pom.xml'
-                    nexusArtifactUploader artifacts: [
-                        [
-                            artifactId: pom.artifactId,
-                            classifier: '',
-                            file: "target/${pom.artifactId}-${pom.version}.jar",
-                            type: 'jar'
-                        ]
-                    ],
-                    credentialsId: NEXUS_CREDENTIALS,
-                    groupId: pom.groupId,
-                    nexusUrl: 'http://52.91.128.112:8081/#admin/repository/repositories:maven-snapshot',
-                    nexusVersion: 'nexus3',
-                    protocol: 'http',
-                    repository: 'your-repository',
-                    version: pom.version
+                // Run SonarQube analysis with the token
+                withSonarQubeEnv(SONARQUBE_SERVER) {
+                    sh """
+                        ${MAVEN_HOME}/bin/mvn sonar:sonar \
+                        -Dsonar.login=${sonarqube-token}
+                    """
                 }
             }
         }
+ 
+        stage('Quality Gate') {
+            steps {
+                // Wait for the SonarQube analysis to be completed and check the quality gate status
+                timeout(time: 5, unit: 'MINUTES') {
+                    waitForQualityGate abortPipeline: true
+                }
+            }
+        }
+ 
+        // stage('Publish to Nexus') {
+        //     steps {
+        //         script {
+        //             def pom = readMavenPom file: 'pom.xml'
+        //             nexusArtifactUploader artifacts: [
+        //                 [
+        //                     artifactId: pom.artifactId,
+        //                     classifier: '',
+        //                     file: "target/${pom.artifactId}-${pom.version}.jar",
+        //                     type: 'jar'
+        //                 ]
+        //             ],
+        //             credentialsId: NEXUS_CREDENTIALS,
+        //             groupId: pom.groupId,
+        //             nexusUrl: 'http://52.91.128.112:8081/#admin/repository/repositories:maven-snapshot',
+        //             nexusVersion: 'nexus3',
+        //             protocol: 'http',
+        //             repository: 'your-repository',
+        //             version: pom.version
+        //         }
+        //     }
+        // }
     }
  
     post {
