--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -25,8 +25,10 @@ pipeline {
         }
 
         stage('SonarQube Analysis') {
+            steps{
             withSonarQubeEnv() {
               sh "${MAVEN_HOME}/bin/mvn clean verify sonar:sonar -Dsonar.projectKey=sonartest"
+            }
             }
         }
  
