--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
  
     environment {
         // Define environment variables for tools
-        NEXUS_CREDENTIALS = 'nexus-credentials'  // The ID of the Nexus credentials
+        NEXUS_CREDENTIALS = 'NEXUS_CREDENTIALS'  // The ID of the Nexus credentials
         SONAR_TOKEN = 'sonarqube-token'  // The ID of the SonarQube token
         SONARQUBE_SERVER = 'SONARQUBE_SERVER'  // The name of the SonarQube server configured in Jenkins
         MAVEN_HOME = tool name: 'MAVEN_HOME', type: 'maven'
